    -
  Changes:
    -
  Bugfixes:
    - Fixed that manually setting a recipe productivity of 0 would not work (#364) (Thanks Dutch0903!)
    - Fixed a crash when opening the machine dialog for a machine that uses fluid fuels
    - Fixed a crash when opening the districts view on a migrated save (#369)
    - Fixed a crash when trying to reset a machine while the matrix solver is active (#374)
    - Fixed that entering a decimal beacon amount would crash
    - Fixed a couple of migration-related crashes
    - Fixed that compatible module detection would not always work properly

---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 22. 10. 2024
  Changes:
    - Changed the button in the top left corner to show again by default
  Bugfixes:
    - Fixed a crash caused by migration (#352)
    - Fixed a crash after deleting a District that had trashed factories inside it (#353)
    - Fixed a crash when trying to open the product picker with Pyanodon's active

---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 21. 10. 2024
  Features:
    - Updated the mod for Factorio 2.0 and the Space Age expansion. This means adoption to changes in existing systems and support for new systems, the most significant of which will be listed here. The mod will still work just fine without Space Age, with automatic adjustements to the interface.
    - This release is considered [Experimental]. While it was beta-tested with a small group for a few months, the many changes will have introduced some bugs and crashes. Please let me know about anything you encounter on Github.
    - Lastly: This update was a huge amount of effort over many months, and puts the mod in a much better place for the future. It's a big step forward, I hope you enjoy it, and thanks for the support so far!